# lshaz

./: .gitignore  CMakeLists.txt  LICENSE  LSHAZ_EVALUATION_REPORT.md  README.md  install.sh  lshaz.config.yaml
.github/workflows/: ci.yml  lshaz-pr.yml  lshaz-sarif.yml
completions/: lshaz.bash  lshaz.fish  lshaz.zsh
docs/: architecture.md  configuration.md  developer-guide.md  hypothesis-engine.md  output-formats.md  rules.md
include/faultline/analysis/: AllocatorTopology.h  EscapeAnalysis.h  FaultlineASTConsumer.h  FaultlineAction.h
include/faultline/core/: Config.h  DiagnosticInteraction.h  HotPathOracle.h  PerfProfileParser.h  Version.h
include/faultline/ir/: IRAnalyzer.h  IRFunctionProfile.h
include/lshaz/analysis/: CacheLineMap.h  CallGraph.h  DataFlowAnalyzer.h  EscapeAnalysis.h  EscapeSummary.h  LayoutSafety.h  LshazASTConsumer.h  LshazAction.h  NUMATopology.h  SymbolNames.h  ThreadRoleSummary.h
include/lshaz/core/: Config.h  Diagnostic.h  DiagnosticDedup.h  DiagnosticInteraction.h  ExecutionMetadata.h
include/lshaz/hypothesis/: CalibrationFeedback.h  ExperimentSynthesizer.h  HazardClass.h  LatencyHypothesis.h  MeasurementPlan.h  PMUTraceFeedback.h
include/lshaz/ir/: DiagnosticRefiner.h  IRFunctionProfile.h
include/lshaz/pipeline/: CompileDBResolver.h  RepoProvider.h  ScanPipeline.h  ScanRequest.h  ScanResult.h  SourceFilter.h
src/: main.cpp
src/analysis/: AllocatorTopology.cpp  CacheLineMap.cpp  CallGraph.cpp  DataFlowAnalyzer.cpp  EscapeAnalysis.cpp  FaultlineASTConsumer.cpp  FaultlineAction.cpp  LshazASTConsumer.cpp  LshazAction.cpp  NUMATopology.cpp  ThreadRoleSummary.cpp
src/cli/: DiffCommand.cpp  ExpCommand.cpp  ExplainCommand.cpp  ExplainCommand.h  FeedbackCommand.cpp  FeedbackCommand.h  FixCommand.cpp  FixCommand.h  HypCommand.cpp  InitCommand.cpp  InitCommand.h  ScanCommand.cpp  ScanResultParser.cpp
src/core/: Config.cpp  Diagnostic.cpp  DiagnosticDedup.cpp  DiagnosticInteraction.cpp  HotPathOracle.cpp  PerfProfileParser.cpp  PrecisionBudget.cpp
src/hypothesis/: CalibrationFeedback.cpp  ExperimentSynthesizer.cpp  HypothesisConstructor.cpp  HypothesisTemplate.cpp  InteractionModel.cpp  MeasurementPlan.cpp  PMUTraceFeedback.cpp
src/ir/: DiagnosticRefiner.cpp  IRAnalyzer.cpp
src/output/: JSONOutput.cpp  SARIFOutput.cpp
src/pipeline/: CompileDBResolver.cpp  RepoProvider.cpp  ScanPipeline.cpp  SourceFilter.cpp
src/rules/: FL001_CacheLineSpanning.cpp  FL002_FalseSharing.cpp  FL010_OverlyStrongOrdering.cpp  FL011_AtomicContention.cpp  FL013_SpinWaitNoPause.cpp  FL020_HeapAllocHotPath.cpp  FL030_VirtualDispatch.cpp  FL031_StdFunctionHotPath.cpp  FL040_CentralizedGlobalState.cpp  FL041_ContendedQueue.cpp  FL060_NUMAUnfriendly.cpp  FL070_TLBPressure.cpp  FL090_HazardAmplification.cpp
test/: analysis_ground_truth_test.cpp  output_schema_contract_test.cpp  pipeline_unit_test.cpp  scan_e2e_test.cpp
test/fixtures/hft_core/include/: feed_handler.h
test/fixtures/hft_core/src/: feed_handler.cpp
test/fixtures/thread_roles/: CMakeLists.txt
test/fixtures/thread_roles/src/: main.cpp  stats.h  worker.cpp
validation/: README.md  run.sh
validation/tier1/: ABSEIL_VALIDATION_REPORT.md  run_corpus.sh
validation/tier1/results/: abseil_full_scan_v0.2.0.json
validation/tier2/: run_benchmarks.sh
